@@ -32,7 +32,7 @@ package com.rultor.scm.git;
 import com.google.common.io.Files;
 import com.rultor.scm.Branch;
 import com.rultor.shell.ShellMocker;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collection;
 import javax.validation.ConstraintViolationException;
 import org.hamcrest.MatcherAssert;
@@ -50,7 +50,8 @@ public final class GitTest {
     /**
      * URL to public GitHub repository.
      */
-    private static final String GIT_URL = "ssh://github.com/xembly/xembly.git";
+    private static final URI REPO =
+        URI.create("ssh://git@github.com/yegor256/xembly.git");
 
     /**
      * Git public ctor args can not be null.
@@ -58,7 +59,7 @@ public final class GitTest {
      */
     @Test(expected = ConstraintViolationException.class)
     public void failsWhenInitializedWithNulls() throws Exception {
-        new Git(null, new URL("git@github.com:rultor/rultor.git"), null);
+        new Git(null, new URI("ssh://git@github.com:rultor/rultor.git"), null);
     }
 
     /**
@@ -70,7 +71,7 @@ public final class GitTest {
         MatcherAssert.assertThat(
             new Git(
                 new ShellMocker.Bash(Files.createTempDir()),
-                new URL(GitTest.GIT_URL),
+                GitTest.REPO,
                 "test"
             ).checkout("master"),
             Matchers.notNullValue(Branch.class)
@@ -86,7 +87,7 @@ public final class GitTest {
         MatcherAssert.assertThat(
             new Git(
                 new ShellMocker.Bash(Files.createTempDir()),
-                new URL(GitTest.GIT_URL),
+                GitTest.REPO,
                 "test2"
             ).branches(),
             Matchers.notNullValue(Collection.class)
